crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column@add_column_add_column_simple_mysql.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
expression: "result.iter().map(|q| q.build(backend)).collect::<Vec<String>>().join(\"\\n\")"
---
ALTER TABLE `users` ADD COLUMN `nickname` text
