crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column@add_column_add_column_with_backfill_sqlite.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
expression: "result.iter().map(|q| q.build(backend)).collect::<Vec<String>>().join(\"\\n\")"
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "nickname" text NOT NULL )
INSERT INTO "users_temp" ("id", "nickname") SELECT "id", 0 AS "nickname" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
