crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column_enum_non_nullable_with_default@enum_non_nullable_with_default_MySql.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
assertion_line: 555
expression: sql
---
;
ALTER TABLE `users` ADD COLUMN `status` ENUM('active', 'inactive', 'pending') NOT NULL DEFAULT ('active')
