crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column_enum_non_nullable_with_default@enum_non_nullable_with_default_Postgres.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
assertion_line: 555
expression: sql
---
CREATE TYPE "users_user_status" AS ENUM ('active', 'inactive', 'pending');
ALTER TABLE "users" ADD COLUMN "status" users_user_status NOT NULL DEFAULT ('active')
