crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column_with_empty_string_default@empty_string_default_MySql.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
assertion_line: 610
expression: sql
---
ALTER TABLE `users` ADD COLUMN `nickname` text NOT NULL DEFAULT ('')
