crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__add_column_with_empty_string_default@empty_string_default_Sqlite.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
assertion_line: 610
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "nickname" text NOT NULL DEFAULT ('') );
INSERT INTO "users_temp" ("id", "nickname") SELECT "id", '' AS "nickname" FROM "users";
DROP TABLE "users";
ALTER TABLE "users_temp" RENAME TO "users"
